Visual adjustments and new release

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Apice Framework</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+	<meta name="theme-color" content="#000000" />
+    <meta name="description" content="Apice Web Framework"/>
+	<title>Apice Framework</title>
     <link rel="stylesheet" type="text/css" href="./src/apice.css"/>
     <link rel="stylesheet" type="text/css" href="./site/css/apice-samples.css"/>
     <script type="text/javascript" src="./dist/apice.min.js"></script>
